<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>talkable-product-automation</groupId>
    <artifactId>talkable-product-automation</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>TalkableProductAutomationProject</name>
    <url>http://maven.apache.org</url>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <env.NAME>BASTION</env.NAME>
        <execution.threads>2</execution.threads>
    </properties>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>


                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <inherited>true</inherited>
                <version>2.22.0</version>
                <configuration>
                    <systemPropertyVariables>
                        <test.environment>${env.NAME}</test.environment>

                    </systemPropertyVariables>

                    <forkCount>${execution.threads}</forkCount>
                    <reuseForks>true</reuseForks>
                    <perCoreThreadCount>false</perCoreThreadCount>
                    <parallel>classes</parallel>
                    <threadCount>${execution.threads}</threadCount>

                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <suiteXmlFiles>
                        <!--&lt;!&ndash;<suiteXmlFile>.\src\main\resources\TestSuites\AllTestSuites.xml</suiteXmlFile>&ndash;&gt;-->
                        <!--&lt;!&ndash;<suiteXmlFile>.\src\main\resources\TestSuites\SmokeTest.xml</suiteXmlFile>&ndash;&gt;-->
                        <suiteXmlFile>.\src\main\resources\TestSuites\ParallelExecution.xml</suiteXmlFile>

                    </suiteXmlFiles>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.11</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.4.0</version>
        </dependency>


        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-path</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>3.0.7</version>
        </dependency>


    </dependencies>


</project>